<resources>
    <string name="app_name" translatable="false">DalPlayer</string>
    <string name="app_introduction" translatable="false">App introduction</string>
    <string name="app_introduction_1_arahanja" translatable="false">You can look up Hanja(Chinese characters in Korea) endlessly.</string>
    <string name="app_introduction_2_arahanja" translatable="false">You can see Hanja as a decomposed form.</string>
    <string name="app_introduction_3_arahanja" translatable="false">You can look up difficult Hanja during web surfing.</string>
    <string name="app_introduction_4_arahanja" translatable="false">There is a today\'s expression.</string>
    <string name="app_introduction_5_arahanja" translatable="false">AraHanja has various type of workbooks.</string>
    <string name="app_introduction_1_araplayer" translatable="false">Ask ChatGPT with the difficult subtitles.</string>
    <string name="app_introduction_2_araplayer" translatable="false">The best video player for language learners.</string>
    <string name="app_introduction_3_araplayer" translatable="false">You can see the difficult words while watching videos.</string>
    <string name="app_introduction_4_araplayer" translatable="false">It can turn of/off the subtitles automatically while watching videos.</string>
    <string name="app_introduction_5_araplayer" translatable="false">You can sync subtitles and voices easily.</string>
    <string name="app_introduction_1_araconv_korean" translatable="false">Learn Korean for free with ChatGPT.</string>
    <string name="app_introduction_1_araconv_chinese" translatable="false">Learn Chinese for free with ChatGPT.</string>
    <string name="app_introduction_1_araconv_japanese" translatable="false">Learn Japanese for free with ChatGPT.</string>
    <string name="app_introduction_1_araconv" translatable="false">Learn English for free with ChatGPT.</string>
    <string name="app_introduction_2_araconv" translatable="false">ChatGPT creates role-playing material for you.</string>
    <string name="app_introduction_3_araconv" translatable="false">Study with speaking mode and sentence completion mode.</string>
    <string name="app_introduction_4_araconv" translatable="false">Listen on repeat mode to improve your listening skills.</string>
    <string name="app_introduction_5_araconv" translatable="false">Register frequently used prompts with ChatGPT for easy access.</string>
    <string name="app_introduction_1_arahangul" translatable="false">Feel free to ask ChatGPT</string>
    <string name="app_introduction_2_arahangul" translatable="false">You can practice writing Hangul</string>
    <string name="app_introduction_3_arahangul" translatable="false">You can practice typing Hangul</string>
    <string name="app_introduction_4_arahangul" translatable="false">Listen ordinary Korean people\'s voice</string>
    <string name="app_introduction_5_arahangul" translatable="false">You can join Kakao\'s group chat to meet real Koreans</string>
    <string name="app_introduction_1_aramultiplayer" translatable="false">The best video player for multiple screen shots.</string>
    <string name="app_introduction_2_aramultiplayer" translatable="false">You can play or stop all videos at once.</string>
    <string name="app_introduction_3_aramultiplayer" translatable="false">You can watch same videos in different screens as welll</string>
    <string name="app_introduction_4_aramultiplayer" translatable="false">It stops playing videos when it goes background mode.</string>
    <string name="app_introduction_5_aramultiplayer" translatable="false">It has A-B Repeat mode so you can watch favorite screens endlessly</string>
    <string name="loading">Loading…</string>
    <string name="msg_confirm_title">Exit</string>
    <string name="msg_refresh">Refresh</string>
    <string name="msg_confirm_exit_app">Do you want to exit this app?</string>
    <string name="msg_confirm_exit">Do you want to exit?</string>
    <string name="msg_confirm_exit_gpt">Do you want to exit chatGPT?</string>
    <string name="msg_confirm_refresh">Refresh meaning can take long time.do you want to continue?</string>
    <string name="msg_confirm_yes">Yes</string>
    <string name="msg_confirm_no">No</string>
    <string name="msg_confirm_choose">Choose</string>
    <string name="msg_confirm_cancel">Cancel</string>
    <string name="error_msg_billing_unavailable">In-app billing service is unavailable, please upgrade Android Market/Play to version >= 3.9.16</string>
    <string name="error_msg_billing_not_init">Billing not initialized.</string>
    <string name="btn_watch_ads" translatable="false">Watch AD</string>
    <string name="btn_get_points" translatable="false">Get Points</string>
    <string name="msg_ads_remove_success">Removed AD successfully!</string>
    <string name="msg_ads_restore_success">Restoration successful!</string>
    <string name="msg_ads_wait_to_load_ads" translatable="false">The ad is loading. Please wait a moment.</string>
    <string name="tts_title">Text to Speech</string>
    <string name="tts_info">Text to Speech is not available. Do you want to install it?</string>
    <string name="tts_ok">OK</string>
    <string name="tts_cancel">Cancel</string>
    <string name="tts_open_setting">Open setting</string>
    <string name="error_msg_tts_not_supported">This Language is not supported</string>
    <string name="error_msg_tts_initializing">Error occurred while initializing Text-To-Speech engine</string>
    <string name="error_msg_check_mute">Please check mute</string>
    <string name="error_msg_zero_volume">Please check the volume</string>
    <string name="splash_copyright" translatable="false">Copyright © 2024 AraOneSoft.\nAll rights reserved.</string>
    <string name="action_main_wordlist">WordList</string>
    <string name="action_main_list">List</string>
    <string name="action_main_search_history">History</string>
    <string name="menu_log_in">Log In/Sign up</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_naver_cafe_manual">Manual</string>
    <string name="menu_community">Community</string>
    <string name="menu_kakaotalk_groupchat">Talk Koreans</string>
    <string name="menu_kakaotalk_groupchat1">Kakao Talk</string>
    <string name="menu_kakaotalk_groupchat_arahangul">Study Hangul together</string>
    <string name="menu_mail">Mail</string>
    <string name="menu_app_download">App Download</string>
    <string name="menu_free_app_download">Free App Download</string>
    <string name="menu_share_app">Share this app</string>
    <string name="app_name_AraJangbogi">Ara Jangbogi</string>
    <string name="app_name_AraGyeongjosa">Ara Gyeongjosa</string>
    <string name="app_name_AraTravel">Ara Travel</string>
    <string name="app_name_VocabWave">Vocab Wave</string>
    <string name="app_name_Helpee">Helpee</string>
    <string name="app_name_AraMultiplayer">Ara MultiPlayer</string>
    <string name="app_name_AraHanja">Ara Hanja</string>
    <string name="app_name_AraThousand">Ara Thousand</string>
    <string name="app_name_AraJesa">Ara Jesa</string>
    <string name="app_name_MacMultiPlayer">Mac Multi Player</string>
    <string name="app_description_AraJangbogi">A shopping checklist app to check and manage necessary items.</string>
    <string name="app_description_AraGyeongjosa">Record who gave how much for weddings, funerals, dol parties, and other events. Track what you gave to others and compare give-and-take by person.</string>
    <string name="app_description_AraTravel">A travel preparation checklist app to check and manage items needed before traveling.</string>
    <string name="app_description_VocabWave">Learn English words while playing an enjoyable shooting game.</string>
    <string name="app_description_Helpee">Don\'t worry about unknown English words. Just register the word and your friends will help you!</string>
    <string name="app_description_AraMultiplayer">Watch multiple videos simultaneously at once.</string>
    <string name="app_description_AraHanja">A Chinese character dictionary that follows one character to another.</string>
    <string name="app_description_AraThousand">Ara Thousand Characters provides detailed explanations of the classic text, helping you understand philosophy and wisdom from history.</string>
    <string name="app_description_AraJesa">An app to record and manage jesa and charye ceremonies.</string>
    <string name="app_description_MacMultiPlayer">Multi-player video app for Mac. Watch multiple videos at once on your Mac.</string>
    <string name="share_app_screen_title">Share App</string>
    <string name="share_app_other_apps">Other Apps</string>
    <string name="share_app_other_apps_message">Please download the following apps and give a 5-star review. It helps the developer. Thank you.</string>
    <string name="share_app_iphone">iPhone</string>
    <string name="share_app_android">Android</string>
    <string name="share_app_share">Share</string>
    <string name="menu_remove_ad_banner">Remove Ad Banner</string>
    <string name="gesture">Gesture</string>
    <string name="options">Options</string>
    <string name="setting">Setting</string>
    <string name="wordlist">Wordlist</string>
    <string name="bookmarks">Bookmark list</string>
    <string name="dragLeft">Drag Left/Right</string>
    <string name="dragUpLeft">Drag Up/Down on Left Screen</string>
    <string name="dragUpRight">Drag Up/Down on Right Screen</string>
    <string name="dragLeftSub">Drag Left/Right on Subtitle</string>
    <string name="dragUpSub">Drag Up/Down on Subtitle</string>
    <string name="singleTap">Single Tap on Screen</string>
    <string name="doubleTrap">Double Tap on Screen</string>
    <string name="longTrap">Long Tap on Screen</string>
    <string name="seek">Seek</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="next_pre">Next/Previous</string>
    <string name="position">Position</string>
    <string name="play_pause">Play/Pause</string>
    <string name="show_hide_menu">Show/Hide Menu</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="save">Save</string>
    <string name="etc">ETC</string>
    <string name="make_favorite">Make favorite</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="menu">Menu</string>
    <string name="hint_add_desc">Notes about this user</string>
    <string name="title_add_desc">Write about this user</string>
    <string name="backup_selected_text">Backup selected text</string>
    <string name="open_settings">Open setting view</string>
    <string name="make_a_quiz">Make a quiz</string>
    <string name="add_other_workbook_here">Add other workbook here</string>
    <string name="copy_selected_text">Copy selected text</string>
    <string name="copy">Copy</string>
    <string name="preview">Preview</string>
    <string name="display_order">Display order</string>
    <string name="include_index">Include index</string>
    <string name="include_pronunciation">Include pronunciation</string>
    <string name="separate_by_tab">Separate by tab</string>
    <string name="one_finger_gestures">One Finger Gestures</string>
    <string name="subtitle_position">Subtitle Position</string>
    <string name="title">Title</string>
    <string name="host">Host</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="type_here">Type here</string>
    <string name="copy_subtitles">Copy subtitles</string>
    <string name="include_time">Include time</string>
    <string name="include_hided_subtitles">Include hided subtitles</string>
</resources>