<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/options"
            android:title="@string/options"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/settings"
            android:title="@string/setting"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/wordlist"
            android:title="@string/wordlist"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/bookmarks"
            android:title="@string/bookmarks"
            app:actionViewClass="android.widget.TextView" />
    </group>
</menu>
