<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <include layout="@layout/layout_header_back" />
    <LinearLayout
        style="@style/WidthMatch"
        android:orientation="horizontal"
        android:background="#c6c5c5"
        android:padding="6dp">
        <TextView
            android:layout_weight="4"
            android:layout_marginLeft="10dp"
            style="@style/TextView_Title"
            android:layout_gravity="center_vertical"
            android:text="ONE FINGER GESTURE"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/dragLeft"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/seek"
                android:alpha="0.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/dragUpLeft"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/brightness"
                android:alpha="0.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/dragUpRight"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/volume"
                android:alpha="0.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/dragLeftSub"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/next_pre"
                android:alpha="0.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/dragUpSub"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/position"
                android:alpha="0.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/singleTap"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/play_pause"
                android:alpha="0.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/doubleTrap"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/show_hide_menu"
                android:alpha="0.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="4"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/longTrap"/>
            <TextView
                android:layout_weight="1"
                style="@style/TextView_Title"
                android:layout_gravity="center_vertical"
                android:text="@string/screen_lock"
                android:alpha="0.5"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>