<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ViewBase"
    android:orientation="vertical"
    android:weightSum="3">

    <com.dalread.component.Toolbar
        android:id="@id/header"
        style="@style/WidthMatch"
        app:leftIcon="@drawable/ic_back"
        app:rightColor="@color/white"
        app:rightText="@string/menu"
        app:title="@string/copy_subtitles" />

    <LinearLayout
        style="@style/Match"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            style="@style/TextView_Player_Option_Sub_Header"
            android:text="@string/preview" />

        <me.zhanghai.android.fastscroll.FastScrollScrollView
            android:id="@+id/fssv_preview"
            android:background="@color/backgroundColor"
            style="@style/Match">

            <TextView
                android:id="@+id/tvPreview"
                style="@style/TextView_Title"
                android:padding="5dp"
                android:textIsSelectable="true" />
        </me.zhanghai.android.fastscroll.FastScrollScrollView>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        style="@style/Match"
        android:layout_weight="2">

        <LinearLayout
            style="@style/WidthMatch"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/llDisplayOrder"
                style="@style/WidthMatch"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Player_Option_Sub_Header"
                    android:text="@string/display_order" />

                <com.yanzhenjie.recyclerview.SwipeRecyclerView
                    android:id="@+id/rvListDisplayOrder"
                    style="@style/WidthMatch" />

            </LinearLayout>

            <TextView
                style="@style/TextView_Player_Option_Sub_Header"
                android:text="@string/etc" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_include_index"
                style="@style/SwitchSetting"
                android:checked="true"
                android:text="@string/include_index" />

            <View style="@style/Divider" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_include_time"
                style="@style/SwitchSetting"
                android:checked="true"
                android:text="@string/include_time" />

            <View style="@style/Divider" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_include_hided_subtitles"
                style="@style/SwitchSetting"
                android:text="@string/include_hided_subtitles" />

            <View style="@style/Divider" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_separate_by_tab"
                style="@style/SwitchSetting"
                android:text="@string/separate_by_tab" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
