<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_log_in"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_mail"
            android:title="@string/menu_mail"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_remove_ad_banner"
            android:icon="@drawable/ic_remove_ads"
            android:title="@string/menu_remove_ad_banner"
            app:actionViewClass="android.widget.TextView" />
    </group>
</menu>
